# fleet-consciousness-dashboard

./: .gitignore  README.md  index.html  pyproject.toml
fleet_consciousness_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fleet_dashboard/: __init__.py
tests/: test_dashboard.py
